--- a/src/PreTrip/Views/Usuario/ConfirmarCompra.cshtml
+++ b/src/PreTrip/Views/Usuario/ConfirmarCompra.cshtml
@@ -1,18 +1,1 @@
-﻿
-@{
-    ViewBag.Title = "ConfirmarCompra";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Confirmar Compra</h2>
-<div class="container-fluid" style="width:50%;margin:0 auto;">
-
-   <div class="form-group row">
-      <label for="example-text-input" class="col-xs-2 col-form-label">Nº Conta</label>
-      <div class="col-xs-10">
-        <input class="form-control" type="text" value="" id="example-text-input">
-      </div>
-   </div>
-    <button>Confirmar</button>
-</div>
-
+﻿@model PreTrip.ViewModel.CompraViewModel
