--- a/src/PreTrip/Views/Usuario/CadastrarEmpresa.cshtml
+++ b/src/PreTrip/Views/Usuario/CadastrarEmpresa.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@model PreTrip.Model.Classes.Usuario
+﻿@model PreTrip.Model.Classes.Empresa
 
 @Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
 
@@ -11,7 +10,7 @@
 
              @using (Html.BeginForm("CadastrarEmpresa", "Usuario", FormMethod.Post, new { @class = "row" }))
              { 
-                @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml",new PreTrip.Model.Classes.Empresa())             
+                @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml")             
              }
             </div>
             <br />
