--- a/src/PreTrip/Views/Usuario/Empresas.cshtml
+++ b/src/PreTrip/Views/Usuario/Empresas.cshtml
@@ -1,9 +1,4 @@
-﻿@{
-    ViewBag.Title = "VisualizarEmpresas";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
+﻿@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
 
 <div class="pull-right">
     @Html.ActionLink("Cadastrar", "CadastrarEmpresa", "Usuario", new { @class = "btn btn-success" })
