--- a/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
@@ -25,10 +25,10 @@
                     </a>
                 </li>
                 <li>
-                    @Html.ActionLink(@PreTripSession.Usuario.Pessoa.Nome, "Index", "Usuario", att)
+                    <a href="/Usuario/Index" class="btn navbar-btn btn">@PreTripSession.Usuario.Pessoa.Nome</a>                       
                 </li>    
                 <li>
-                    @Html.ActionLink("Logout", "Index", null, attLogout)
+                    <a href="/Usuario/Logout" class="btn btn-danger" , style="margin-top:8px;margin-left:10px;">Logout</a>                    
                 </li> 
                 <li>
                     <a href="@Url.Action("MeuCarrinho", "Usuario")">
