--- a/src/PreTrip/Views/Shared/Navbar/_PartialDefault.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialDefault.cshtml
@@ -26,7 +26,7 @@
                         Home
                     </a>
                 </li>
-                <li>@Html.ActionLink("Logar", "Index", "Home", attLogin) </li>                   
+                <li> <a href="/Home/Index" class="btn navbar-btn btn-success"> Logar</a> </li>                   
                 <li>@Html.ActionLink("Cadastre-se!", "Cadastrar", "Home", attCadastro)</li>
                 <li>
                     <a href="@Url.Action("MeuCarrinho", "Usuario")">
