Corrigido alguns bugs

--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -6,7 +6,10 @@
             <div class="col-md-6">
                 <h3>
                     @PreTripSession.Usuario.Pessoa.Nome
-               </h3>
+                </h3>
+                <h4>
+                    Saldo: @PreTripSession.Usuario.Pessoa.ContaBancaria.Saldo
+                </h4>
                 <p>Procure por sugestões, cadastre viagens.</p>
             </div>
         </div>
