--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -124,7 +124,9 @@
                     </span>
                     <div class="clearfix"></div>
                     <span>
-                        @Html.ActionLink("Adicionar ao Carrinho", "AddViagemCarrinho", "Usuario", Model.Viagem, new { @class = "btn btn-success", style = "width: 100%; margin: 1em" })
+                        <a class="btn btn-success" href="@Html.Action("AddViagemCarrinho", "Usuario")" style="width: 100%; margin: 1em">
+                            Adicionar ao Carrinho
+                        </a>
                     </span>
                 </div>
 
