--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -124,7 +124,7 @@
                     </span>
                     <div class="clearfix"></div>
                     <span>
-                        <a class="btn btn-success" href="@Url.Action("AddViagemCarrinho", "Usuario")" style="width: 100%; margin: 1em">
+                        <a class="btn btn-success" href="@Url.Action("AddViagemCarrinho", "Usuario", new { id = Model.Viagem.Id })" style="width: 100%; margin: 1em">
                             Adicionar ao Carrinho
                         </a>
                     </span>
