--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -52,7 +52,7 @@
                     @foreach (var avaliacao in Model.Viagem.Avaliacoes)
                     {
                         <div style="padding: 2em; border-top: 1px solid #b6b6b6; border-bottom: 1px solid #b6b6b6;">
-                            <h4>@avaliacao.Usuario.Pessoa.Nome</h4>
+                            <h4>@avaliacao.Pessoa.Nome</h4>
                             <h5>@avaliacao.Nota</h5>
                             <div>
                                 <p>
