--- a/src/PreTrip/Views/Usuario/ConfirmarCompra.cshtml
+++ b/src/PreTrip/Views/Usuario/ConfirmarCompra.cshtml
@@ -1,36 +1,81 @@
 ﻿@model PreTrip.ViewModel.CompraViewModel
-@{ 
-    var cssColorClass = Model.Sucesso ? "success" : "danger";
-}
-<div class="container">
-    <div class="panel panel-@cssColorClass" style="margin-top: 2em;">
-        <div class="panel-heading">
-            <h3>@Model.Informacao</h3>
-        </div>
-        <div class="panel-body">
-                @if (Model.Sucesso)
-                {
-                    <p>
-                        A sua compra de @Model.Pedidos.Count() itens foi finalizada com sucesso. Com um valor total de <span class="text-success" style="font-size: 3rem;vertical-align: middle;">R$@Model.PrecoCompra</span>
-                    </p>
-                }
-                else
-                {
-                    <p>
-                        Não foi possível realizar a compra
-                    </p>
-                }
-        </div>
+@using PreTrip.Session
 
-        <ul class="list-group">
-            @foreach (var pedido in Model.Pedidos)
-            {
-                <li class="list-group-item">
-                    <p>@pedido.Viagem.Titulo - @pedido.Viagem.Destino.Cidade</p>
-                    <p>@pedido.Quantidade Item(s)</p>
-                    <p>R$@pedido.PrecoFinal</p>
-                </li>
-            }
-        </ul>
+@using (Html.BeginForm("ConfirmarCompra", "Usuario", FormMethod.Post))
+{
+    <div class="container" style="padding: 3em 0">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Conta corrente</div>
+                    <div class="panel-body">
+                        <div style="margin: 1em;">
+                            @if (PreTripSession.Usuario.Pessoa.ContaBancaria.Saldo >= Model.PrecoCompra)
+                            {
+                                <p>Você possui R$ @PreTripSession.Usuario.Pessoa.ContaBancaria.Saldo de saldo na sua conta</p>
+
+                                <button style="margin: 1em;" type="submit" class="btn btn-success">Confirmar compra com saldo</button>
+                            }
+                            else
+                            {
+                                <p>
+                                    Você não possui saldo suficiente para finalizar a compra´.
+                                </p>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Cartão de crédito</div>
+                    <div class="panel-body">
+                        <div style="margin: 1em;">
+                            @if (PreTripSession.Usuario.Pessoa.ContaBancaria.Cartoes.Any())
+                            {
+                                <div class="form-group" >
+                                    <p>Escolha um cartão</p>
+                                    <div>
+                                        @Html.DropDownListFor(x => x.IdCartao, PreTripSession.Usuario.Pessoa.ContaBancaria.Cartoes.Select(x =>
+                                        new SelectListItem()
+                                        {
+                                            Value = x.Id.ToString(),
+                                            Text = "Final " + x.NumeroCartao.ToString().Substring(12)
+                                        }), new { @class = "form-control" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <p>Escolha um numero de parcelas</p>
+                                    @{ 
+                                        var parcelas = new List<int>() { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 };
+                                    }
+                                    <div>
+                                        @Html.DropDownListFor(x => x.NumParcelas, parcelas.Select(x =>
+                                        new SelectListItem()
+                                        {
+                                            Selected = x == 1,
+                                            Value = x.ToString(),
+                                            Text = x.ToString()
+                                        }), new { @class = "form-control" })
+                                    </div>
+                                </div>
+
+                            }
+                            else
+                            {
+                                <div>
+                                    <p>Você não possui cartões vinculados</p>
+                                    @Html.ActionLink("Adicione um cartão", "AdicionarCartão", "Usuario")
+                                </div>
+                            }
+                        </div>
+
+                        <button style="margin: 1em;" type="submit" class="btn btn-success">Confirmar com cartão</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+}
